$Id: History,v 1.17 2002-02-24 01:35:26 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

History file for visualization/modeling
---------------------------------------

23rd February 2002  John Allison (vis-V04-00-02)
- Removed Begin/EndPrimitives from G4HitsModel and
  G4TrajectoriesModel.  This was causing nested calls to
  Begin/EndPrimitives (and thus to glNewList/EndList in OpenGL stored
  mode), since the trajectories and hits Draw methods themselves have
  Begin/EndPrimitives.

24th August 2001  John Allison  (vis-V03-02-13)
- Intoduced argument for printing in G4VModel::Validate(G4bool warn).
- Changed default return value in G4VModel::Validate(G4bool) to true.
- Invoke CalculateExtent after successful geometry change in
  G4PhysicalVolumeModel::Validate, and other bug fixes..

14th August 2001  John Allison  (vis-V03-02-11)
- Added sceneHandler.Begin/EndPrimitives messages to models (long
  standing bug!).

9th August 2001  John Allison  (vis-V03-02-10-00)
- Removed G4ModelingParameters::hierarchy.  It is no longer used.  The
  textual or graphical representation of the geometry hierarchy is now
  done in G4xxxTree classes in visua;ization/Tree.
