@@ -1,4 +1,4 @@
-$Id: History,v 1.17 2002-02-24 01:35:26 johna Exp $
+$Id: History,v 1.18 2002-10-24 14:52:51 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -19,6 +19,9 @@ committal in the CVS repository !
 
 History file for visualization/modeling
 ---------------------------------------
+
+24th October 2002  John Allison (vis-V04-01-00)
+- Changes for AddThis(const G4VTrajectory&) and (const G4VHit&).
 
 23rd February 2002  John Allison (vis-V04-00-02)
 - Removed Begin/EndPrimitives from G4HitsModel and
